libraries/ckit/regression/invalid-programs/r42.c
main () {
  int (*x)[2];
  int (*y)[4];
 
  x = y;
}
